# public/openapi.yaml
@@ -1906,130 +1906,6 @@ paths:
           description: Unauthorized
         404:
           description: Not found
-  /oauth/applications:
-    get:
-      tags:
-        - OAuth
-      summary: List applications
-      operationId: listOauthApplication
-      responses:
-        200:
-          description: Success
-    post:
-      tags:
-        - OAuth
-      summary: Create application
-      operationId: createOauthApplication
-      responses:
-        201:
-          description: Created successfully
-  /oauth/applications/{id}:
-    delete:
-      tags:
-        - OAuth
-      summary: Delete application
-      operationId: deleteOauthApplication
-      parameters:
-        - 
-          name: id
-          in: path
-          description: Id ID
-          required: true
-          schema:
-            "$defs":
-              UUID:
-                type: string
-                description: a Universally Unique Identifier
-                format: uuid
-                pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-            "$ref": "#/$defs/UUID"
-      responses:
-        200:
-          description: Success
-        404:
-          description: Not found
-    get:
-      tags:
-        - OAuth
-      summary: Get application
-      operationId: getOauthApplication
-      parameters:
-        - 
-          name: id
-          in: path
-          description: Id ID
-          required: true
-          schema:
-            "$defs":
-              UUID:
-                type: string
-                description: a Universally Unique Identifier
-                format: uuid
-                pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-            "$ref": "#/$defs/UUID"
-      responses:
-        200:
-          description: Success
-        404:
-          description: Not found
-    patch:
-      tags:
-        - OAuth
-      summary: Patch application
-      operationId: patchOauthApplication
-      parameters:
-        - 
-          name: id
-          in: path
-          description: Id ID
-          required: true
-          schema:
-            "$defs":
-              UUID:
-                type: string
-                description: a Universally Unique Identifier
-                format: uuid
-                pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-            "$ref": "#/$defs/UUID"
-      responses:
-        200:
-          description: Success
-        404:
-          description: Not found
-  /oauth/consents:
-    get:
-      tags:
-        - OAuth
-      summary: List consents
-      operationId: listOauthConsent
-      responses:
-        200:
-          description: Success
-  /oauth/consents/{id}:
-    delete:
-      tags:
-        - OAuth
-      summary: Delete consent
-      operationId: deleteOauthConsent
-      parameters:
-        - 
-          name: id
-          in: path
-          description: Id ID
-          required: true
-          schema:
-            "$defs":
-              UUID:
-                type: string
-                description: a Universally Unique Identifier
-                format: uuid
-                pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-            "$ref": "#/$defs/UUID"
-      responses:
-        200:
-          description: Success
-        404:
-          description: Not found
   /organizations:
     get:
       tags:
@@ -3886,22 +3762,6 @@ paths:
       responses:
         201:
           description: Created successfully
-  /user/password:
-    post:
-      tags:
-        - User
-      summary: Create password
-      operationId: createUserPassword
-      security:
-        - 
-          bearerAuth:[]
-      responses:
-        201:
-          description: Created successfully
-        400:
-          description: Invalid request
-        401:
-          description: Unauthorized
   /user/preferences:
     get:
       tags:
